* Move 404 CSS out of glbal style sheet and put in 404.html * Fix footer not covering whole page width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,9 +9,11 @@ html, body {
 	margin: 0 auto;
 	padding: 0;
 	height: 100%;
+	width: 100%;
 }
 #container {
 	min-height: 100%;
+	min-width: 900px;
 	position: relative;
 }
 a:visited {
@@ -367,18 +369,3 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#85b9e2', end
 	display: none;
 }
 }
-/* START 404.html specific CSS */
-#four_oh_four:before {
-	/* Image location for the 404 image */
-	content: url('../images/404.png');
-}
-.four_oh_four {
-	/* Set font size of the "go back/home" text */
-	font-size: 48px;
-	line-height: 15px;
-}
-#four_oh_four_content {
-	margin: 150px auto;
-	text-align: center;
-}
-/* END 404.html CSS */
